--- a/src/assets/libs/bootstrap/css/bootstrap-grid.css
+++ b/src/assets/libs/bootstrap/css/bootstrap-grid.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap Grid v5.0.0-beta3 (https://getbootstrap.com/)
+ * Bootstrap Grid v5.0.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -40,9 +40,8 @@
 }
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1320px;  
-}
-
+    max-width: 1320px;
+  }
 }
 .row {
   --bs-gutter-x: 1.5rem;
