--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -41,3 +41,12 @@
 .form-page label {
   font-size: 16px;
 }
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-error {
+  font-weight: bold;
+  margin-bottom: 0;
+}
