--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -1,3 +1,11 @@
+:root {
+  --dark-blue: 57, 65, 136;
+}
+
+body {
+  scroll-behavior: smooth;
+}
+
 .logo {
   height: 100px;
   margin-left: auto;
@@ -11,7 +19,7 @@
 
 .form-title {
   text-transform: uppercase;
-  color: rgb(65, 66, 145);
+  color: rgb(var(--dark-blue));
 }
 
 .form-row {
@@ -20,8 +28,8 @@
 
 .form-banner {
   color: #fff;
-  background-color: rgba(65, 66, 145, 0.94) !important;
-  background-image: linear-gradient(rgba(65, 66, 145, 0.94), rgba(65, 66, 145, 0.94)); 
+  background-color: rgba(var(--dark-blue), 0.94) !important;
+  background-image: linear-gradient(rgba(var(--dark-blue), 0.94), rgba(var(--dark-blue), 0.94)); 
   background-position-y: 15px;
   padding: 10px;
   margin-top: 15px;
@@ -44,6 +52,10 @@
 
 .form-group {
   margin-bottom: 10px;
+}
+
+.form-errors {
+  margin-top: 20px;
 }
 
 .form-error {
