--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -1,9 +1,20 @@
 :root {
   --dark-blue: 57, 65, 136;
+  --light-green: #28a745;
+}
+
+html {
+  /* height: 100%; */
 }
 
 body {
+  /* height: 100%; */
   scroll-behavior: smooth;
+}
+
+.form-wrapper {
+  /* height: 100%; */
+  background: linear-gradient(rgba(248, 249, 250,.94), rgba(248, 249, 250,0.94)), url(../img/logo_bg.png);
 }
 
 .logo {
@@ -61,4 +72,29 @@ body {
 .form-error {
   font-weight: bold;
   margin-bottom: 0;
+}
+
+.form-success {
+  margin: 0 auto 0 auto;
+
+  color: var(--light-green);
+  font-size: 80px;
+
+  border: 20px solid var(--light-green);
+  border-radius: 50%;
+
+  width: 200px;
+  height: 200px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.form-success__text {
+  margin: 10px auto 0 auto;
+  width: 300px;
+  text-align: center;
+  font-size: 25px;
 }
